--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ body {
 }
 
 h2{
+    font-size: 30px;
     color: #ffffff;
 }
 .login-container {
@@ -25,17 +26,18 @@ h2{
     padding: 50px;
     border-radius: 8px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-    width: 800px;
+    width: 600px;
     height: 500px;
     text-align: center;
 }
 .login-container h2 {
-    margin-bottom: 20px;
+    margin-bottom: 50px;
 }
 .login-container input {
     width: 100%;
+    height: 45px;
     padding: 10px;
-    margin: 10px 0;
+    margin: 15px 0;
     border: 1px solid #ccc;
     border-radius: 5px;
 }
@@ -53,8 +55,12 @@ h2{
     color: white;
     gap: 5px;
 }
+.login-container .button-container {
+    margin-bottom: 0px;
+}
 .login-container button {
     width: 100%;
+    height: 45px;
     padding: 10px;
     background-color: #007BFF;
     color: white;
