--- a/public/style.css
+++ b/public/style.css
@@ -12,7 +12,7 @@ body {
     height: 100vh;
     width: 100vw;
     background-color: #f4f4f4;
-    background: url("img/Login_bg.jpg") no-repeat center center;
+    background: url("/img/Login_bg.jpg") no-repeat center center;
     background-size: 100% 100%;
     background-attachment: fixed;
 }
