--- a/src/public/main/login.ejs
+++ b/src/public/main/login.ejs
@@ -3,20 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="/style.css">
+    <script src="/main/login.js" defer></script>
     <title>로그인</title>
 </head>
 <body>
     <div class="login-container">
         <h2>로그인</h2>
         <form>
-            <input type="email" placeholder="이메일" required>
-            <input type="password" placeholder="비밀번호" required>
+            <input id="email" type="text" placeholder="이메일">
+            <input id="password" type="text" placeholder="비밀번호">
             <div class="options">
-                <label><input type="checkbox">이메일 저장</label>
+                <label><input id="checkbox" type="checkbox">이메일 저장</label>
                 <a href="#">회원가입</a>
             </div>
             <div class="button-container">
-                <button type="submit">로그인</button>
+                <button id="button" type="submit">로그인</button>
             </div>
         </form>
     </div>
