회원가입 모달팝업  띄우기

--- a/src/public/main/login.ejs
+++ b/src/public/main/login.ejs
@@ -14,12 +14,36 @@
             <input id="password" type="text" placeholder="비밀번호">
             <div class="options">
                 <label><input id="checkbox" type="checkbox">이메일 저장</label>
-                <a href="#">회원가입</a>
+                <a id="member" href="#">회원가입</a>
             </div>
             <div class="button-container">
                 <button id="button" type="submit">로그인</button>
             </div>
         </form>
     </div>
+
+    <div class="modal" id="modal">
+        <div class="modal-container">
+            <h2>회원가입</h2>
+            <form>
+                <input id="email" type="text" placeholder="이메일">
+                <input id="name" type="text" placeholder="이름">
+                <input id="password" type="text" placeholder="비밀번호">
+                <input id="password-confirm" type="text" placeholder="비밀번호 확인">
+                <div class="button-container">
+                    <button id="button" type="submit">회원가입</button>
+                    <button type="button" onclick="closeModal()">닫기</button>
+                </div>
+            </form>
+        </div>
+    </div>
+    <script>
+        function openModal() {
+            document.querySelector('#modal').style.display = "block";
+        }
+        function closeModal() {
+            document.querySelector('#modal').style.display = "none";
+        }   
+    </script>
 </body>
 </html>
