회원가입 모달창 가운데배치, 스타일 수정

--- a/src/public/main/login.ejs
+++ b/src/public/main/login.ejs
@@ -13,7 +13,7 @@
             <input id="email" type="text" placeholder="이메일">
             <input id="password" type="text" placeholder="비밀번호">
             <div class="options">
-                <label><input id="checkbox" type="checkbox">이메일 저장</label>
+                <label class="checkbox"><input id="checkbox" type="checkbox">이메일 저장</label>
                 <a id="member" href="#">회원가입</a>
             </div>
             <div class="button-container">
@@ -26,13 +26,13 @@
         <div class="modal-container">
             <h2>회원가입</h2>
             <form>
-                <input id="email" type="text" placeholder="이메일">
-                <input id="name" type="text" placeholder="이름">
-                <input id="password" type="text" placeholder="비밀번호">
-                <input id="password-confirm" type="text" placeholder="비밀번호 확인">
+                <input id="m_email" type="text" placeholder="이메일">
+                <input id="m_name" type="text" placeholder="이름">
+                <input id="m_password" type="text" placeholder="비밀번호">
+                <input id="m_password_confirm" type="text" placeholder="비밀번호 확인">
                 <div class="button-container">
-                    <button id="button" type="submit">회원가입</button>
-                    <button type="button" onclick="closeModal()">닫기</button>
+                    <button id="m_submit" type="submit">회원가입</button>
+                    <button id="m_button"type="button" onclick="closeModal()">닫기</button>
                 </div>
             </form>
         </div>
