--- a/src/public/main/login.ejs
+++ b/src/public/main/login.ejs
@@ -25,18 +25,27 @@
     <div class="modal" id="modal">
         <div class="modal-container">
             <h2>회원가입</h2>
-            <form>
-                <input id="m_email" type="text" placeholder="이메일">
-                <input id="m_name" type="text" placeholder="이름">
-                <input id="m_password" type="text" placeholder="비밀번호">
-                <input id="m_password_confirm" type="text" placeholder="비밀번호 확인">
+            <form id="signup-form">
+                <div class="input-group">
+                    <input id="m_email" type="email" placeholder="이메일" required>
+                </div>
+                <div class="input-group">
+                    <input id="m_name" type="text" placeholder="이름" required>
+                </div>
+                <div class="input-group">
+                    <input id="m_password" type="password" placeholder="비밀번호" required>
+                </div>
+                <div class="input-group">
+                    <input id="m_password_confirm" type="password" placeholder="비밀번호 확인" required>
+                </div>
                 <div class="button-container">
                     <button id="m_submit" type="submit">회원가입</button>
-                    <button id="m_button"type="button" onclick="closeModal()">닫기</button>
+                    <button id="m_button" type="button" onclick="closeModal()">닫기</button>
                 </div>
             </form>
         </div>
     </div>
+    
     <script>
         function openModal() {
             document.querySelector('#modal').style.display = "block";
