--- a/src/public/main/login.ejs
+++ b/src/public/main/login.ejs
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/style.css">
     <script src="/main/login.js" defer></script>
     <title>로그인</title>
