--- a/src/public/style.css
+++ b/src/public/style.css
@@ -2,10 +2,11 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Inter', sans-serif !important;
 }
 
 body {
-    font-family: Arial, sans-serif;
+    
     display: flex;
     justify-content: center;
     align-items: center;
