--- a/src/public/main/winmain.ejs
+++ b/src/public/main/winmain.ejs
@@ -1,10 +1,75 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <title>메인화면</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="/main/winmain.js" defer></script>
+    <title>EJS 상단 및 좌측 메뉴</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-    <h1>환영합니다</h1>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">로고</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav me-auto">
+                    <% let menus = ["홈", "소개", "서비스", "포트폴리오", "블로그", "고객지원", "문의하기"]; %>
+                    <% menus.forEach(function(menu) { %>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#"><%= menu %></a>
+                        </li>
+                    <% }); %>
+                </ul>
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="btn_logout" id="logout" href="#">로그아웃</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <div class="container-fluid">
+        <div class="row">
+            <!-- 좌측 메뉴 -->
+            <nav class="col-md-2 d-none d-md-block bg-light sidebar">
+                <div class="position-sticky">
+                    <ul class="nav flex-column">
+                        <% let sideMenus = ["대시보드", "설정", "사용자 관리", "통계", "로그"]; %>
+                        <% sideMenus.forEach(function(menu) { %>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#"><%= menu %></a>
+                            </li>
+                        <% }); %>
+                    </ul>
+                </div>
+            </nav>
+            
+            <!-- 메인 컨텐츠 -->
+            <main class="col-md-10 ms-sm-auto px-md-4">
+                <div class="tab-content" id="mainTabContent">
+                    <div class="tab-pane fade show active" id="home" role="tabpanel">홈 화면</div>
+                    <div class="tab-pane fade" id="about" role="tabpanel">소개 페이지</div>
+                    <div class="tab-pane fade" id="services" role="tabpanel">서비스 페이지</div>
+                </div>
+                <ul class="nav nav-tabs" id="mainTabs">
+                    <li class="nav-item">
+                        <a class="nav-link active" data-bs-toggle="tab" href="#home">홈</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" data-bs-toggle="tab" href="#about">소개</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" data-bs-toggle="tab" href="#services">서비스</a>
+                    </li>
+                </ul>
+            </main>
+        </div>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
