--- a/src/public/main/login.ejs
+++ b/src/public/main/login.ejs
@@ -9,13 +9,15 @@
 </head>
 <body>
     <div class="login-container">
-        <h2>로그인</h2>
+        <h2>귀멸의 칼날</h2>
         <form>
             <input id="email" type="text" placeholder="이메일">
             <input id="password" type="text" placeholder="비밀번호">
             <div class="options">
                 <label class="checkbox"><input id="checkbox" type="checkbox">이메일 저장</label>
                 <a id="member" href="#">회원가입</a>
+                <span id="line">/</span>
+                <a id="skip" href="#">건너뛰기</a>
             </div>
             <div class="button-container">
                 <button id="button" type="submit">로그인</button>
