--- a/src/public/style.css
+++ b/src/public/style.css
@@ -27,8 +27,8 @@ h2{
     padding: 50px;
     border-radius: 8px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-    width: 600px;
-    height: 500px;
+    width: 630px;
+    height: 450px;
     text-align: center;
 }
 .login-container h2 {
@@ -38,14 +38,16 @@ h2{
     width: 100%;
     height: 45px;
     padding: 10px;
-    margin: 15px 0;
+    margin: 10px 0;
     border: 1px solid #ccc;
     border-radius: 5px;
+}
+#password {
+    margin-bottom: 0px;
 }
 .login-container .options {
     display: flex;
     align-items: center;
-    margin: 10px 0;
     font-size: 14px;
 }
 .login-container .options a{
@@ -54,8 +56,8 @@ h2{
     text-decoration: none;
     margin-right: 10px; 
 }
-#line{
-    color: white;
+.login-container .options span{
+    color: white; 
 }
 #skip{
     margin-left: 5px;
