타이틀 수정

--- a/src/public/main/login.ejs
+++ b/src/public/main/login.ejs
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="login-container">
-        <h2>귀멸의 칼날</h2>
+        <h2>로그인</h2>
         <form>
             <input id="email" type="text" placeholder="이메일">
             <input id="password" type="text" placeholder="비밀번호">
