--- a/src/public/main/winmain.ejs
+++ b/src/public/main/winmain.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="/main/winmain.js" defer></script>
-    <title>EJS 상단 및 좌측 메뉴</title>
+    <title>메인화면</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
